# local_muti_doc_agentic_information_extractor

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
demo/: DEMO_SCRIPT.md  demo_config.yaml  generate_demo_files.py  run_demo.py
demo/docs/: allhands_notes.md  board_email.eml  engineering_status.docx  office_snack_survey.txt  sales_pipeline.xlsx
src/extractor/: __init__.py  __main__.py  chunking.py  cli.py  config.py  discovery.py  embedding_cache.py  judge.py  lmstudio_client.py  models.py  pipeline.py  prompts.py  relevance.py  report.py  sizing.py  worker.py
src/extractor/extraction/: __init__.py  base.py  docx.py  email.py  fallback.py  html.py  pdf.py  pptx.py  text_md.py  xlsx_csv.py
tests/: conftest.py  test_chunking.py  test_cli.py  test_discovery.py  test_embedding_cache.py  test_extraction_docx.py  test_extraction_email.py  test_extraction_fallback.py  test_extraction_html.py  test_extraction_pdf.py  test_extraction_pptx.py  test_extraction_text.py  test_extraction_xlsx_csv.py  test_judge.py  test_live_lmstudio.py  test_lmstudio_client_mock.py  test_models.py  test_pipeline_integration.py  test_relevance.py  test_report.py  test_sizing.py  test_worker.py
