[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "extractor"
version = "0.1.0"
description = "Local agentic multi-document information extractor backed by LM Studio SLMs"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2",
    "pyyaml>=6",
    "typer>=0.12",
    "rich>=13",
    "tiktoken>=0.7",
    "tenacity>=8",
    "pypdf>=4",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "lxml>=5",
    "extract-msg>=0.48",
    "markitdown>=0.0.1a2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "pytest-cov>=5",
    "ruff>=0.6",
    "fpdf2>=2.7",  # generates PDF fixtures for extraction tests only
]

[project.scripts]
extractor = "extractor.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-m 'not live'"
markers = [
    "live: requires a running LM Studio instance with configured tiers loaded",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
